--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 
 services:
 
+  ## WebApp to cover with BDD or E2E
   keystone:
     image: mahnunchik/keystonejs
     environment:
@@ -9,13 +10,15 @@ services:
       - MONGO_PORT_27017_TCP_PORT=27017
       - CLOUDINARY_URL=cloudinary://api_key:api_secret@cloud_name
     ports:
-      - 8888:8080
+      - 8080:8080
     links:
       - mongo
 
+  ## Related WebApp database
   mongo:
     image: mongo
 
+  ## Client for Selenium real-time inspection
   novnc:
     image: javanile/novnc
     environment:
@@ -26,12 +29,25 @@ services:
     links:
       - selenium
 
+  ## Selenium server with Chrome
   selenium:
     image: selenium/standalone-chrome-debug:3.11.0-californium
     environment:
       - VNC_NO_PASSWORD=1
-      - SCREEN_WIDTH=1200
-      - SCREEN_HEIGHT=675
+      - SCREEN_WIDTH=640
+      - SCREEN_HEIGHT=480
     ports:
       - 4444:4444
       - 5900:5900
+
+  ## Composer command-line utility
+  composer:
+    image: composer
+    volumes:
+      - ./:/app
+
+  ## Behat command-line utility
+  behat:
+    entrypoint: /app/vendor/bin/behat
+    extends:
+      service: composer
