--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "dockerpratico/behat",
   "require-dev": {
-    "behat/behat": "^3.4",
+    "behat/behat": "3.4.3",
     "behat/mink": "v1.7.1",
     "behat/mink-extension": "2.1.*",
     "behat/mink-selenium2-driver": "1.3.*",
