--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,17 +18,6 @@ services:
   mongo:
     image: mongo
 
-  ## Client for Selenium real-time inspection
-  novnc:
-    image: javanile/novnc
-    environment:
-      - REMOTE_HOST=localhost
-      - REMOTE_PORT=5900
-    ports:
-      - 8081:8081
-    links:
-      - selenium
-
   ## Selenium server with Chrome
   selenium:
     image: selenium/standalone-chrome-debug:3.11.0-californium
@@ -39,6 +28,19 @@ services:
     ports:
       - 4444:4444
       - 5900:5900
+    links:
+      - keystone
+
+  ## Client for Selenium real-time inspection
+  novnc:
+    image: javanile/novnc
+    environment:
+      - REMOTE_HOST=localhost
+      - REMOTE_PORT=5900
+    ports:
+      - 8081:8081
+    links:
+      - selenium
 
   ## Task running environment setting
   task:
